clean README content

--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 Install:
         opam install js_of_ocaml
 
-in your .ml file:
-   open Js
-   open Firebug (* for console, etc. *)
+API:
+        http://ocsigen.org/js_of_ocaml/2.3/api/
 
 you need to compile your ml file to bytecode:
     ocamlfind ocamlc -package js_of_ocaml -package js_of_ocaml.syntax -syntax camlp4o -linkpkg -o index.byte index.ml
