change readme compile command

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ API:
         http://ocsigen.org/js_of_ocaml/2.3/api/
 
 you need to compile your ml file to bytecode:
-    ocamlfind ocamlc -package js_of_ocaml -package js_of_ocaml.syntax -syntax camlp4o -linkpkg -o index.byte index.ml
+    ocamlbuild -use-ocamlfind -pkgs js_of_ocaml,js_of_ocaml.syntax -syntax camlp4o index.byte
 
 then compile the bytecode into javascript:
      js_of_ocaml index.byte
